# yandex-market-bot

./: .env  .gitignore  README.md  bot.py  bulk_check.py  config.py  main.py  pyproject.toml  refund_bot.db  refunds.db  run.bat  test_setup.py  testparser.py  yandex_checker.py
