[project]
name = "yandex-refund-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.26.0",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "openai>=2.26.0",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
]
